# project-codeguard

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: new-rule.yml  rule-feedback.yml
.github/workflows/: build-ide-bundles.yml  deploy-docs.yml  test-mcp-server.yml  update-codeguard-rules.yml  validate-rules.yml
benchmarks/: __main__.py  config.py  judge.py  models.py  orchestrator.py  report.py  run.py
benchmarks/docker/: Dockerfile  entrypoint.sh
benchmarks/scenarios/: javavulnerablelab.yaml
claude-code-skill-plugin/: index.html
codeguard-reviewer/: index.html
custom-rules/: index.html
docs/: benchmarking.md  claude-code-skill-plugin.md  custom-rules.md  cwe-top25-2025-mapping.md  faq.md  getting-started.md  index.md  install-paths.md  mcp-server.md  personas.md
evaluations/codeguard-inspect/: README.md  pyproject.toml
evaluations/codeguard-inspect/codeguard_harness/: __init__.py  prompts.py  scorers.py
evaluations/codeguard-inspect/codeguard_harness/tasks/: __init__.py  password_storage.py
evaluations/codeguard-inspect/tests/: test_password_storage_task.py  test_scorers.py
faq/: index.html
getting-started/: index.html
install-paths/: index.html
mcp-server/: index.html
personas/: index.html
search/: search_index.json
skills/: index.html
src/: artifact_targets.py  convert_to_ide_formats.py  converter.py  emit_agents.py  language_mappings.py  tag_mappings.py  utils.py  validate_unified_rules.py  validate_versions.py
(+78 files in other folders)
