[project]
name = "codeguard-inspect-evaluations"
version = "0.1.0"
description = "Minimal Inspect AI evaluations for Project CodeGuard"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.226",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeguard_harness"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
exclude-newer = "7 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
